# dino2-unpacker

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO  UnpackerChooser.h  dechunker.cpp  dechunker.h  help.h  main.cpp  main.cpp.autosave
.github/workflows/: cmake.yml
converter/: RGBConverter.cpp  RGBConverter.h  converter.cpp  converter.h  paletteconverter.cpp  paletteconverter.h
docs/html/: 3_816_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_816_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_816_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_816_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  3_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  (+107 more)
files/: WaveFile.h
unpacker/: ArmorUnpacker.cpp  ArmorUnpacker.h  ComingUnpacker.cpp  ComingUnpacker.h  DechunkerUnpacker.cpp  DechunkerUnpacker.h  DoorUnpacker.cpp  DoorUnpacker.h  EntryUnpacker.cpp  EntryUnpacker.h  FileUnpacker.cpp  FileUnpacker.h  ItemUnpacker.cpp  ItemUnpacker.h  PXLUnpacker.cpp  PXLUnpacker.h  StageDBSUnpacker.cpp  StageDBSUnpacker.h  Subscr6Unpacker.cpp  Subscr6Unpacker.h  TEXUnpacker.cpp  TEXUnpacker.h  WEPUnpacker.cpp  WEPUnpacker.h  WPUnpacker.cpp  WPUnpacker.h  armorunpacker.cpp  armorunpacker.h  dechunkerunpacker.cpp  dechunkerunpacker.h  doorunpacker.cpp  doorunpacker.h  itemunpacker.cpp  itemunpacker.h  pxlunpacker.cpp  pxlunpacker.h  unpacker.cpp  unpacker.h
(+125 files in other folders)
